# stock_data

./: .env.example  .gitignore  CLAUDE.md  README.md  api-reference.md  pyproject.toml
docs/: API.html  API.md  api-naming-review-2026-06-23.md  architecture-review-2026-06-09.md  architecture-review-2026-07-16.md  optimization-plan-2026-07-16.md  stock-board-reverse-index-design-2026-07-01.md
docs/akshare/: README.md  article.md  bank.md  bond.md  currency.md  dc.md  energy.md  event.md  fund_private.md  fund_public.md  futures.md  fx.md  hf.md  index.md  interest_rate.md  macro.md  nlp.md  option.md  others.md  qdii.md  qhkc_broker.md  qhkc_commodity.md  qhkc_fund.md  qhkc_fundamental.md  qhkc_index.md  qhkc_index_data.md  qhkc_tools.md  spot.md  stock.md  tool.md
docs/baostock/: README.md  StockBasicInfoAPI.md  baostock_indexdata.html  baostock_pool.html  baostock_stockdata.html  dataExplain.md  depositRate.md  dividInfo.md  factorInfo.md  goodArticle.md  home.md  hs300Stock.md  indexData.md  loanRate.md  localdatafactorInfo.md  modifyRecord.md  pythonAPI.md  pythonDevRes.md  reserveRatio.md  seasonBalance.md  seasonCashFlow.md  seasonDupont.md  seasonExpress.md  seasonForecast.md  seasonGrowth.md  seasonOperation.md  seasonProfit.md  stockBasic.md  stockIndustry.md  stockKData.md  supplyData.md  supplyDataYear.md  sz50Stock.md  valuationDaily.md  zz500Stock.md
docs/maintenance/: ths_js_vendor_runbook.md
docs/myquant/: 00-overview-and-pricing.md  01-strategy-lifecycle.md  02-data-subscription-events.md  03-quote-query-free.md  04-common-data-free.md  05-stock-fundamentals-free.md  06-stock-valueadd-paid.md  07-trading-functions.md  08-margin-trading.md  09-algo-ipo-misc.md  10-data-reference-stock.md  README.md  appendix-fundamentals-full-fields.md
docs/zhitu/: 01-stocks-list.md  02-indices-industries-concepts.md  03-limit-up-down-pools.md  04-listed-company-details.md  05-realtime-trading.md  06-market-data.md  07-basic-info.md  08-technical-indicators.md  09-financial-statements.md  10-indices-api.md  README.md
docs/zzshare/: 01-kline.md  02-realtime.md  03-basic-data.md  04-uplimit-review.md  05-dragon-tiger.md  06-sentiment.md  07-boards.md  08-hot-topics.md  09-topic-library.md  10-rate-limits.md  README.md
scripts/: __init__.py  migrate_to_membership.py  probe_tencent_index_amount.py  probe_zhitu_holder_num.py
skills/: market-data-obtain.md  market-principles.md  market-recap.md  slug_glossary.md  stock-picking.md
stock_data/: __init__.py  control.py  server.py
stock_data/api/: cache.py  endpoint_meta.py  routes.py  schemas.py
stock_data/data_provider/: __init__.py  akshare_fetcher.py  baostock_fetcher.py  base.py  constants.py  index_symbols.py  manager.py  realtime_types.py  stock_cache.py  stock_list_cache.py  trade_calendar_cache.py  tushare_fetcher.py  yfinance_fetcher.py  (+1 more)
tests/: README.md  _network_guard.py  conftest.py  test_akshare_index_volume.py  test_akshare_zt_pool_normalize.py  test_announcements_eastmoney_failover.py  test_api_cache.py  test_api_html.py  test_baidu_search_news.py  test_baostock_dividend.py  test_base.py  test_base_unit.py  test_board_backfill.py  test_board_csv_seed.py  test_board_membership_double_write.py  test_board_membership_migration.py  test_board_membership_readwrite.py  test_board_persistence_subtype.py  test_board_purge_stale_members.py  test_board_quote_route.py  test_board_source_routing.py  test_board_stale_fallback.py  test_board_stocks_forward_route.py  test_boards.py  test_boards_api.py  test_boards_backfill_integration.py  test_boards_history_route.py  test_boards_news_surges_routes.py  test_boards_news_surges_schemas.py  test_boards_schemas.py  test_boards_stocks_truncation_integration.py  test_bugfix_pydantic_akshare_csi.py  test_build_membership_index.py  test_capability_flag_collapse.py  test_capability_method_map.py  test_cls_endpoints.py  test_cls_fetcher.py  test_cls_live.py  test_cninfo_fetcher.py  test_code_converter.py  (+89 more)
tools/: fix_stock_board_ths_csv.py
(+1250 files in other folders)
