[project]
name = "stock-data"
version = "0.1.0"
description = "Local stock data aggregation server for AI agents"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
keywords = ["stock", "finance", "data", "api"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pandas>=2.0.0",
    "numpy>=1.26.0",
    "tenacity>=8.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "cachetools>=5.3.0",
    "tushare>=1.4.0",
    "baostock>=0.8.8",
    "gm>=3.0.180,<4",
    "akshare>=1.14.0",
    "yfinance>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-xdist>=3.0.0",
    "ruff>=0.4.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
]
zzshare = ["zzshare>=0.4.0,<0.5"]   # PyPI package `zzshare`; the `DataApi` class lives at `zzshare.client.DataApi`

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "T20", "RUF100"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# T201: CLI / verify scripts use print() for user-facing output by design.
# B008: FastAPI route signatures and test fixtures intentionally use
# function calls (e.g. Body(...), DataCapability.X) in default arguments.
"stock_data/tools/**.py" = ["T201"]
"tests/verify_converters_live.py" = ["T201", "B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# Default `pytest` skips live_network tests (those hitting real upstream APIs)
# so the dev loop is fast. CI / full-coverage runs use `pytest -m ""` to
# deselect everything. See tests/_network_guard.py for the marker legend.
addopts = ["-m", "not live_network"]
# Custom markers — see tests/_network_guard.py for the full legend and
# tests/conftest.py for the network-to-xfail hook that consumes them.
markers = [
    "live_network: test may hit real upstream APIs (network/API flakiness is expected, not a bug)",
    "requires_token: test needs TUSHARE_TOKEN / ZHITU_TOKEN / MYQUANT_TOKEN in env to run",
]
